Fixing UI issue where would go off page on smaller windows

--- a/webapp/src/css/ClassInput.css
+++ b/webapp/src/css/ClassInput.css
@@ -39,7 +39,7 @@
     border-bottom: thin solid rgb(255, 255, 255);
 
     margin-bottom: .5em;
-    font-size: 2em;
+    font-size: 2.7vw;
     font-weight: bold;
     font-family: 'Raleway', sans-serif;
 
@@ -91,10 +91,6 @@
     .preference-container {
         display: block;
     }
-
-    .title-preferences {
-        font-size: 1.5em;
-    }
 }
 
 @media only screen and (max-width: 700px) {
@@ -102,8 +98,12 @@
         display: block;
     }
 
-    .ci--title, .ci--title-preference {
+    .ci--title-preference {
         font-size: 1.2em;
+    }
+
+    .ci--title {
+        font-size: 1.4em;
     }
 
     .title-preferences {
